<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/_5sdp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/adaFeedProfileImg"
                android:src="@drawable/ic_user"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_5sdp"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center">
                <TextView
                    android:id="@+id/adaFeedProfileName"
                    android:text="@string/user_name"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="@color/colorSh1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/adaFeedVip"
                    android:src="@drawable/crowns"
                    android:layout_toEndOf="@id/adaFeedProfileName"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="-5dp"
                    android:layout_width="24dp"
                    android:layout_height="24dp"/>
                <LinearLayout
                    android:layout_below="@+id/adaFeedProfileName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_5sdp">
                    <ImageView
                        android:src="@drawable/ic_time"
                        android:layout_width="@dimen/_14sdp"
                        android:layout_height="@dimen/_14sdp"/>
                    <TextView
                        android:id="@+id/adaFeedTime"
                        android:text="@string/_1_hr"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:textSize="@dimen/_9sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/adaFeedContent"
            android:text="Content Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"/>
        <ImageView
            android:id="@+id/adaFeedImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginTop="@dimen/_5sdp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp">
            <ImageView
                android:id="@+id/adaFeedThumb"
                android:src="@drawable/ic_outline_thumb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_5sdp"/>
            <TextView
                android:id="@+id/adaFeedLikes"
                android:text="@string/_100_likes"
                android:textStyle="bold"
                android:layout_toEndOf="@id/adaFeedThumb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_5sdp"/>
            <ImageView
                android:layout_toStartOf="@+id/adaFeedComment"
                android:src="@drawable/ic_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"/>
            <TextView
                android:id="@+id/adaFeedComment"
                android:text="@string/comments"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_toStartOf="@+id/adaFeedShare"
                android:src="@drawable/ic_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"/>
            <TextView
                android:id="@+id/adaFeedShare"
                android:text="@string/share"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>